--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
@@ -78,6 +78,7 @@
   "text.rei.addons": "REI Doplňky",
   "text.rei.shapeless": "Beztvarý",
   "text.rei.input.methods": "Vstupní metody",
+  "text.rei.input.methods.reload.progress": "Pokrok: %s%%",
   "text.rei.input.methods.default": "Výchozí",
   "text.rei.input.methods.default.description": "Výchozí vstupní metoda. Toto nemění hledaný výraz.",
   "text.rei.input.methods.jyutping": "Jyutping (Kantonština)",
@@ -88,13 +89,18 @@
   "text.rei.input.methods.bopomofo.description": "Vstupní metoda porovnávání čínských znaků s Bopomofo (Mandarínština).",
   "text.rei.input.methods.hint": "Alternativní vstupní metody jsou k dispozici pro váš jazyk.",
   "text.rei.input.methods.initializing": "Inicializace vstupní metody",
+  "text.rei.input.methods.tooltip.hints": "Zobrazit nápovědy popisku",
+  "text.rei.hint.input.methods": "Gratulujeme k nastavení vstupní metody!\nMůžete ji znovu nakonfigurovat pomocí tlačítka Vyhledávácí filtr!",
+  "text.rei.hint.favorites.discover": "Právě jste odstranili oblíbenou položku!\nMůžete ji přidat zpět kliknutím na tlačítko + !",
+  "text.rei.hint.configure": "Konfigurovat",
+  "text.rei.hint.ignore": "Ignorovat",
   "ordering.rei.ascending": "Vzestupně",
   "ordering.rei.descending": "Sestupně",
   "ordering.rei.registry": "Registr",
   "ordering.rei.name": "Jméno",
   "ordering.rei.item_groups": "Skupiny předmětů",
   "text.auto_craft.move_items": "Přesunout předměty",
-  "text.auto_craft.move_items.tooltip": "Ctrl-klik pro přesun předmětů",
+  "text.auto_craft.move_items.tooltip": "Ctrl-klik pro rychlou výrobu",
   "text.auto_craft.move_items.yog": "Generovat NullPointerException!!",
   "text.rei.expand.view": "Otevřít rozšířené zobrazení",
   "text.rei.expand.view.close": "Zavřít rozšířené zobrazení",
@@ -174,6 +180,10 @@
   "text.rei.changelog.error.missingChangelogFile": "Chybí soubor se seznamem změn!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Nepodařilo se přečíst soubor se seznamem změn!",
   "text.rei.collapsed.entry": "Sbalený záznam: %s",
+  "text.rei.collapsed.entry.hint.expand": "Alt-klik pro rozbalení všech %s (%d předmětů)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Option-klik pro rozbalení všech %s (%d předmětů)",
+  "text.rei.collapsed.entry.hint.collapse": "Alt-klik pro sbalení všech %s (%d předmětů)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Option-klik pro sbalení všech %s (%d předmětů)",
   "favorite.section.gamemode": "Herní režim",
   "favorite.section.weather": "Počasí",
   "favorite.section.time": "Čas",
@@ -245,6 +255,7 @@
   "config.roughlyenoughitems.accessibility.entrySize": "Velikost předmětů:",
   "config.roughlyenoughitems.search.asyncSearch": "Asynchronní vyhledávání:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Velikost oddílu asynchronního vyhledávání:",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Opravu pád asynchronizačního vlákna:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Kompaktní záložky:",
   "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Kompaktní tlačítka šipek karet:",
   "config.roughlyenoughitems.theme": "Motiv:",
@@ -327,6 +338,12 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zvětšení",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Zvýraznění",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Měl by filtr zobrazit:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "Vyloučené kategorie pro rychlou výrobu:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Konfigurovat...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Konfigurace kategorie rychlé výroby",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Přepnout",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Dostupné pro rychlou výrobu",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Vyloučeno z rychlé výroby",
   "config.roughlyenoughitems.filteringScreen": "Vlastní filtrování",
   "config.roughlyenoughitems.filteringRulesScreen": "Vlastní pravidla filtrování",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Vytvořit pravidlo filtrování",
@@ -340,6 +357,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Zobrazit / Skrýt",
   "rule.roughlyenoughitems.filtering.search.show.true": "Zobrazit",
   "rule.roughlyenoughitems.filtering.search.show.false": "Skrýt",
+  "rule.roughlyenoughitems.filtering.basic": "Základní filtrování pluginů",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filtrovat předměty podle REI pluginů. Zde není možná konfigurace.",
   "language.roughlyenoughitems.english": "Angličtina",
   "language.roughlyenoughitems.japanese": "Japonština",
   "language.roughlyenoughitems.chinese_simplified": "Čínština (zjednodušená)",
