--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
@@ -18,7 +18,7 @@
   "text.rei.inventory.highlighting.enabled": "インベントリハイライト ON",
   "text.rei.inventory.highlighting.enabled.tooltip": "この機能はインベントリのスロットが\n検索したものと一致しない場合、灰色になります。\n検索ボックスをダブルクリックで切り替えます。",
   "text.rei.caching.search": "検索結果をキャッシュしています...",
-  "text.rei.caching.search.step": "ステップ %d/%d (%s%%):",
+  "text.rei.caching.search.step": "ステップ %d/%d (%s%%)：",
   "text.rei.config.menu.dark_theme": "ダークテーマ",
   "text.rei.config.menu.craftable_filter": "作成可能な物のみを表示する",
   "text.rei.config.menu.display": "表示設定...",
@@ -78,12 +78,16 @@
   "text.rei.addons": "REI アドオン",
   "text.rei.shapeless": "不定形",
   "text.rei.input.methods": "入力方法",
+  "text.rei.input.methods.reload.progress": "進行状況： %s%%",
   "text.rei.input.methods.default": "デフォルト",
   "text.rei.input.methods.default.description": "デフォルトの入力方法です。デフォルトでは検索キーワードを変換しません。",
   "text.rei.input.methods.jyutping": "粤拼 (広東語)",
   "text.rei.input.methods.pinyin": "拼音 (官話)",
   "text.rei.input.methods.bopomofo": "注音符号 (官話)",
+  "text.rei.input.methods.hint": "お使いの言語に合わせて、適切な入力方式が利用できます。",
   "text.rei.input.methods.initializing": "入力方法をリセットする",
+  "text.rei.input.methods.tooltip.hints": "ツールチップのヒントの表示",
+  "text.rei.hint.input.methods": "入力方式を変更しました！\n検索フィルターボタンを再度クリックすると適応されます。",
   "text.rei.hint.configure": "設定",
   "text.rei.hint.ignore": "無視する",
   "ordering.rei.ascending": "昇順",
@@ -328,8 +332,9 @@
   "config.roughlyenoughitems.isFocusModeZoomed": "フォーカスモードに入る",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "ズームした",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "ハイライト表示",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "フィルターを表示する:",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "フィルターを表示する：",
   "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "設定...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "切り替える",
   "config.roughlyenoughitems.filteringScreen": "フィルタリングの設定",
   "config.roughlyenoughitems.filteringRulesScreen": "フィルタリングルールの変更",
   "config.roughlyenoughitems.filteringRulesScreen.new": "フィルタリングルールの追加",
@@ -343,6 +348,7 @@
   "rule.roughlyenoughitems.filtering.search.show": "表示/非表示:",
   "rule.roughlyenoughitems.filtering.search.show.true": "表示",
   "rule.roughlyenoughitems.filtering.search.show.false": "非表示",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "REIプラグインによるお気に入りの分類を行います。ここでは変更できません。",
   "language.roughlyenoughitems.english": "英語",
   "language.roughlyenoughitems.japanese": "日本語",
   "language.roughlyenoughitems.chinese_simplified": "中国語（簡体）",
