--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
@@ -9,12 +9,16 @@
   "text.rei.search.field.suggestion": "Szukaj...",
   "text.rei.feedback": "Dowolna opinia, którą chcesz przekazać deweloperowi REI? %s aby przesłać swoją opinię!",
   "text.rei.feedback.link": "Kliknij mnie, aby odwiedzić formularz Google",
+  "text.rei.support.me": "Wesprzyj mnie w dalszym ulepszaniu REI!",
+  "text.rei.support.me.desc": "Jako patreon wspierający REI możesz używać najnowszej wersji REI do tworzenia migawek Minecrafta.\nAlternatywnie możesz również wesprzeć mnie finansowo poprzez wynajęcie serwera BisectHosting.\n\n%s\n%s",
   "text.rei.support.me.patreon": "Wesprzyj przez Patreon",
   "text.rei.support.me.bisect": "Użyj kodu SHEDANIEL na BisectHosting",
   "text.rei.not.fully.initialized": "REI nie został jeszcze w pełni zainicjowany!",
   "text.rei.not.fully.initialized.tooltip": "Brakujące etapy: %s\nJeśli to nie zniknie,\nspróbuj szukać wsparcia z wykorzystaniem logów!",
   "text.rei.inventory.highlighting.enabled": "Podświetlenie ekwipunku włączone",
   "text.rei.inventory.highlighting.enabled.tooltip": "To sprawia, że sloty które nie pasują do filtru\nwyszukiwania są szare.\nKliknij dwukrotnie pasek wyszukiwania, aby przełączyć ten tryb.",
+  "text.rei.caching.search": "Wyniki wyszukiwania w pamięci podręcznej REI...",
+  "text.rei.caching.search.step": "Krok %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Ciemny Motyw",
   "text.rei.config.menu.craftable_filter": "Filtr wykonywalnych przedmiotów",
   "text.rei.config.menu.display": "Ustawienia Wyświetlania",
@@ -22,9 +26,12 @@
   "text.rei.config.menu.display.left_side_mob_effects": "Efekty Mobów z Lewej Strony",
   "text.rei.config.menu.display.left_side_panel": "Lewy panel boczny",
   "text.rei.config.menu.display.scrolling_side_panel": "Panel boczny przewijania",
+  "text.rei.config.menu.display.caching_entry_rendering": "Renderowanie wpisu w pamięci podręcznej",
   "text.rei.config.menu.display.side_search_field": "Boczna wyszukiwarka",
   "text.rei.config.menu.display.syntax_highlighting": "Wyróżnianie składni",
   "text.rei.config.menu.config": "Więcej opcji...",
+  "text.rei.config.menu.search_field.position": "Pozycja pola wyszukiwania...",
+  "text.rei.config.menu.search_field.input_method": "Metody wprowadzania...",
   "category.rei.crafting": "Wytwarzanie",
   "category.rei.smelting": "Przetapianie",
   "category.rei.smelting.fuel": "Paliwo",
@@ -55,6 +62,7 @@
   "category.rei.wax_scraping": "Zdzieranie Wosku",
   "category.rei.oxidizing": "Utlenianie",
   "category.rei.oxidation_scraping": "Zdzieranie Utlenienia ",
+  "category.rei.tag": "Znacznik",
   "category.rei.information": "Informacje",
   "text.rei.composting.chance": "§e%d%% Szansa",
   "text.rei.composting.page": "Strona %d",
@@ -63,8 +71,23 @@
   "text.rei.cheat_items": "Dodano {item_count} razy [{item_name}§f] graczowi {player_name}.",
   "text.rei.failed_cheat_items": "§cBłąd podczas dawania przedmiotów.",
   "text.rei.too_long_nbt": "§cNBT przedmiotu jest zbyt długie, aby go zastosować w trybie wieloosobowym.",
+  "text.rei.accepts": "Akceptuje następujące:",
+  "text.rei.tag_accept": "Znacznik: #%s",
+  "text.rei.missing": "Brak następujących elementów:",
   "text.rei.performance": "Analiza wydajności",
+  "text.rei.addons": "Dodatki REI",
   "text.rei.shapeless": "Bezkształtne",
+  "text.rei.input.methods": "Metody wprowadzania",
+  "text.rei.input.methods.reload.progress": "Postęp: %s%%",
+  "text.rei.input.methods.default": "Domyślna",
+  "text.rei.input.methods.default.description": "Domyślna metoda wprowadzania. Nie powoduje to przekształcenia wyszukiwanego terminu.",
+  "text.rei.input.methods.hint": "Dla Twojego języka dostępne są alternatywne metody wprowadzania.",
+  "text.rei.input.methods.initializing": "Inicjowanie metody wprowadzania",
+  "text.rei.input.methods.tooltip.hints": "Wyświetl wskazówki podpowiedzi",
+  "text.rei.hint.input.methods": "Gratulujemy skonfigurowania metody wprowadzania!\nMożesz ponownie skonfigurować to za pomocą przycisku Filtr wyszukiwania!",
+  "text.rei.hint.favorites.discover": "Właśnie usunąłeś ulubiony wpis!\nMożesz dodać go z powrotem, klikając przycisk + tutaj!",
+  "text.rei.hint.configure": "Skonfiguruj",
+  "text.rei.hint.ignore": "Ignoruj",
   "ordering.rei.ascending": "Rosnąco",
   "ordering.rei.descending": "Malejąco",
   "ordering.rei.registry": "Rejestr",
@@ -73,12 +96,16 @@
   "text.auto_craft.move_items": "Przenieś przedmioty",
   "text.auto_craft.move_items.tooltip": "Kliknij Ctrl, aby przenieść przedmioty",
   "text.auto_craft.move_items.yog": "Generate NullPointerException!!",
+  "text.rei.expand.view": "Otwórz widok rozszerzony",
+  "text.rei.expand.view.close": "Zamknij widok rozszerzony",
+  "text.rei.tag.copy.clipboard": "Zapisz drzewo znaczników w schowku",
   "error.rei.transfer.too_small": "Niepowodzenie w przenoszeniu przedmiotów do siatki %dx%d.",
   "error.rei.not.on.server": "REI nie jest na serwerze.",
   "error.rei.not.enough.materials": "Niewystarczająca ilość materiałów.",
   "error.rei.internal.error": "Błąd wewnętrzny: %s",
   "error.rei.recipe.not.unlocked": "Receptura nie została odblokowana w Książce Receptur.",
   "error.rei.not.supported.move.items": "Przenoszenie przedmiotów nie jest obsługiwane z tą recepturą i tym kontenerem.",
+  "text.rei.save.recipes": "Naciśnij %s na tym przepisie, aby zapisać go na później.",
   "error.rei.no.handlers.applicable": "Nie ma odpowiedniej procedury.",
   "error.rei.multi.errors": "Nastąpiły błędy:",
   "rei.rei.no.slot.in.inv": "W ekwipunku nie ma miejsca na przedmiot",
@@ -97,11 +124,13 @@
   "text.rei.weather_button.tooltip.dropdown": "Przełącz pogodę: Lista rozwijana",
   "text.rei.weather_button.tooltip.entry": "Przełącz na %s",
   "text.rei.time_button.tooltip.dropdown": "Zmień pogodę: Lista rozwijana",
+  "text.rei.time_button.tooltip.entry": "Przełącz na %s",
   "text.rei.time_button.name.morn": "Poranek",
   "text.rei.time_button.name.noon": "Południe",
   "text.rei.time_button.name.evening": "Wieczór",
   "text.rei.time_button.name.night": "Noc",
   "text.rei.reload_config": "Przeładuj pluginy",
+  "text.rei.reload_search": "Załaduj ponownie wyszukiwanie",
   "text.rei.config.is.reloading": "Pluginy ładują się ponownie!",
   "text.rei.enabled": "Tak",
   "text.rei.disabled": "Nie",
@@ -123,6 +152,8 @@
   "text.rei.remove_favorites_tooltip": " \n§7Naciśnij %s aby usunąć to z ulubionych.",
   "text.rei.working_station": "Stacja Robocza",
   "text.rei.release_export": "Zwolnij %s aby wyeksportować",
+  "text.rei.ask_to_export": "Czy chcesz wyeksportować „%s”?",
+  "text.rei.ask_to_export.subtitle": "Spowoduje to wyeksportowanie %d wyświetlaczy jako obrazów.",
   "text.rei.recipe_id": "\n%sId receptury: %s",
   "text.rei.recipe_screen_type.selection": "Wybór typu ekranu receptur",
   "text.rei.recipe_screen_type.selection.sub": "Zawsze możesz zmienić tę opcję w Panelu Konfiguracyjnym.",
@@ -136,10 +167,17 @@
   "text.rei.tiny_potato": "Mały ziemniak",
   "text.rei.add_favorite_widget": "Dodaj...",
   "text.rei.dispose_here": "Usuń tutaj",
+  "text.rei.crash.title": "REI zawiesił się!",
+  "text.rei.crash.description": "§cRoughly Enough Item uległ awarii podczas „%s”.\n\n§fSzczegóły awarii są wyświetlane poniżej. Zidentyfikuj modyfikację, która spowodowała awarię, i zgłoś ją autorowi modu wraz z dziennikiem awarii podanym poniżej.\n\nJeśli uważasz, że ta awaria jest spowodowana błędem w produkcie Roughly Enough Item, zgłoś to naszemu narzędziu do śledzenia problemów.\n\n§6Dziękujemy za pomoc!",
   "text.rei.crash.crash_report": "Otwórz Raport Błędu",
   "text.rei.changelog.title": "Zmiany w REI",
   "text.rei.changelog.error.missingChangelogFile": "Brak pliku dziennika zmian!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Niepowodzenie przy czytaniu dziennika zmian",
+  "text.rei.collapsed.entry": "Zwinięty wpis: %s",
+  "text.rei.collapsed.entry.hint.expand": "Naciśnij klawisz Alt, aby rozwinąć wszystkie %s (%d wpisów)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Naciśnij Opcje, aby rozwinąć wszystkie %s (%d wpisów)",
+  "text.rei.collapsed.entry.hint.collapse": "Naciśnij Alt, aby zwinąć wszystkie %s (%d wpisów)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Naciśnij Opcje, aby zwinąć wszystkie %s (%d wpisów)",
   "favorite.section.gamemode": "Tryb gry",
   "favorite.section.weather": "Pogoda",
   "favorite.section.time": "Czas",
@@ -199,6 +237,7 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Górna",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Dolna",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Scal widoki z jednakową zawartością:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Przycisk Dodaj widżet do ulubionych:",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Zawsze niewidzialny",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automatyczne ukrywanie",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Zawsze widoczny",
@@ -210,7 +249,9 @@
   "config.roughlyenoughitems.accessibility.entrySize": "Rozmiar przedmiotu na liście:",
   "config.roughlyenoughitems.search.asyncSearch": "Wyszukiwanie asynchroniczne:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Rozmiar partycji wyszukiwania asynchronicznego:",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Awaria wątku asynchronicznego poprawki:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Kompaktowe karty:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Przyciski strzałek kompaktowej karty:",
   "config.roughlyenoughitems.theme": "Motyw:",
   "config.roughlyenoughitems.theme.dark": "Ciemny",
   "config.roughlyenoughitems.theme.light": "Jasny",
@@ -243,13 +284,16 @@
   "config.roughlyenoughitems.disableRecipeBook": "Wyświetlanie waniliowej Książki receptur:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNie",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aTak",
+  "config.roughlyenoughitems.leftSideMobEffects": "Pozycja efektów bytu:",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Lewa",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Prawa (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Napraw kontener waniliowej karty (Kiedy Książka receptur jest wyłączona):",
   "config.roughlyenoughitems.lighterButtonHover": "Jaśniejszy przycisk podczas najechania kursorem:",
+  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtr wykonywalnych przedmiotów:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Przyciski działań:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Komenda do zmiany trybu gry:",
   "config.roughlyenoughitems.commands.giveCommand": "Komenda do pobierania przedmiotów:",
+  "config.roughlyenoughitems.commands.timeCommand": "Komenda czasowa:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Wczytaj domyślny plugin:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNie (Niebezpieczne)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Odśwież Wątek",
@@ -259,6 +303,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Kolejność przedmiotów na liście:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Szybsze renderowanie przedmiotów:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Renderowanie wpisu w pamięci podręcznej:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Ta opcja poprawi wydajność renderowania wpisów nawet 5-krotnie, przy średnio 2,5-krotnym wzroście wydajności. Spowoduje to jednak przerwanie błysków zaklęć i animowanych tekstur.",
   "config.roughlyenoughitems.itemCheatingMode": "Ilość pobieranych przedmiotów w Trybie Oszukiwania:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normalny",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Odwrócony",
@@ -282,12 +328,21 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Zwykły (podkreślenie)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Kolorowy",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Kolorowy (podkreślenie)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Tryb ostrości wejścia:",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Przybliżenie",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Wyróżnione",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Czy należy filtrować ekrany:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "Wykluczone kategorie szybkiego wytwarzania:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Skonfiguruj...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Konfigurowanie kategorii szybkiego wytwarzania",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Przełącz",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Dostępne dla szybkiego wytwarzania",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Wykluczone z szybkiego wytwarzania",
   "config.roughlyenoughitems.filteringScreen": "Niestandardowe filtrowanie",
   "config.roughlyenoughitems.filteringRulesScreen": "Dostosowane reguły filtrowania",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Utwórz regułę filtrowania",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Usuń",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Spróbuj przeciągnąć!",
   "rule.roughlyenoughitems.filtering.manual": "Ręczne filtrowanie",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Ręcznie wybierz co chcesz ukryć i pokazać.",
   "rule.roughlyenoughitems.filtering.search": "Filtry wyszukiwania",
@@ -296,6 +351,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Pokaż / Ukryj:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Pokaż",
   "rule.roughlyenoughitems.filtering.search.show.false": "Ukryj",
+  "rule.roughlyenoughitems.filtering.basic": "Podstawowe filtrowanie wtyczek",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filtruj wpisy według wtyczek REI. Tutaj nie można tego skonfigurować.",
   "language.roughlyenoughitems.english": "Angielski",
   "language.roughlyenoughitems.japanese": "Japoński",
   "language.roughlyenoughitems.chinese_simplified": "Chiński (pismo uproszczone)",
