--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -94,7 +94,13 @@
   "text.rei.input.methods.pinyin.double.scheme.microsoft": "Microsoft",
   "text.rei.input.methods.pinyin.double.scheme.pinyinpp": "Пиньинь++",
   "text.rei.input.methods.pinyin.double.scheme.xiaohe": "XiaoHe",
+  "text.rei.input.methods.hint": "Альтернативные методы ввода доступны для вашего языка.",
   "text.rei.input.methods.initializing": "Запускается метод ввода",
+  "text.rei.input.methods.tooltip.hints": "Отображать всплывающие подсказки",
+  "text.rei.hint.input.methods": "Поздравляем с настройкой метода ввода!\nВы можете изменить конфигурацию с помощью кнопки фильтра поиска!",
+  "text.rei.hint.favorites.discover": "Вы удалили любимый предмет!\nВы можете добавить его обратно, нажав на кнопку + здесь!",
+  "text.rei.hint.configure": "Конфигурация",
+  "text.rei.hint.ignore": "Игнорировать",
   "ordering.rei.ascending": "По возрастанию",
   "ordering.rei.descending": "По убыванию",
   "ordering.rei.registry": "Регистр",
@@ -180,6 +186,10 @@
   "text.rei.changelog.title": "Список изменений REI",
   "text.rei.changelog.error.missingChangelogFile": "Отсутствует файл журнала изменений!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Не удалось прочитать файл журнала изменений!",
+  "text.rei.collapsed.entry": "Скрытый предмет: %s",
+  "text.rei.collapsed.entry.hint.expand": "Нажмите Alt, чтобы расширить все %s (%d предметов)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Нажмите, удерживая кнопку option, чтобы открыть все %s (%d предметов)",
+  "text.rei.collapsed.entry.hint.collapse": "Нажмите Alt, чтобы свернуть все %s (%d записей)",
   "favorite.section.gamemode": "Игровой режим",
   "favorite.section.weather": "Погода",
   "favorite.section.time": "Время",
@@ -333,6 +343,10 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Увеличение",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Подсвечивание",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Дисплеи должны быть отфильтрованы:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Настройка категорий быстрого крафта",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Переключить",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Доступен для быстрого крафта",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Исключен из быстрого крафта",
   "config.roughlyenoughitems.filteringScreen": "Настраиваемая фильтрация",
   "config.roughlyenoughitems.filteringRulesScreen": "Настраиваемые правила фильтрации",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Создать правило фильтрации",
@@ -346,6 +360,7 @@
   "rule.roughlyenoughitems.filtering.search.show": "Показать/Скрыть:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Показать",
   "rule.roughlyenoughitems.filtering.search.show.false": "Скрыть",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Фильтруйте записи с помощью плагинов REI. Это не настраивается здесь.",
   "language.roughlyenoughitems.english": "Английский",
   "language.roughlyenoughitems.japanese": "Японский",
   "language.roughlyenoughitems.chinese_simplified": "Китайский (упрощенный)",
