--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -32,6 +32,7 @@
   "text.rei.config.menu.config": "更多选项...",
   "text.rei.config.menu.search_field.position": "搜索框位置...",
   "text.rei.config.menu.search_field.input_method": "输入法...",
+  "text.rei.config.menu.search_field.hide_entry_panel_idle": "不搜索时隐藏条目",
   "category.rei.crafting": "合成",
   "category.rei.smelting": "烧炼",
   "category.rei.smelting.fuel": "燃料",
@@ -77,6 +78,8 @@
   "text.rei.performance": "性能分析",
   "text.rei.addons": "REI 插件",
   "text.rei.shapeless": "无序合成",
+  "text.rei.crafting.firework.gunpowder.amount": "火药的数量会影响烟花火箭的飞行时间。",
+  "text.rei.crafting.suspicious_stew": "所合成的迷之炖菜将具有随机效果。",
   "text.rei.input.methods": "输入法",
   "text.rei.input.methods.reload.progress": "进度：%s%%",
   "text.rei.input.methods.default": "预设",
@@ -193,6 +196,8 @@
   "text.rei.collapsed.entry.hint.expand.macos": "按住《Option》键再点击此处以展开所有 %s (%d 条目)",
   "text.rei.collapsed.entry.hint.collapse": "按住《Alt》键再点击此处以折叠所有 %s (%d 条目)",
   "text.rei.collapsed.entry.hint.collapse.macos": "按住《Option》键再点击此处以折叠所有 %s (%d 条目)",
+  "text.rei.spawn_egg": "刷怪蛋",
+  "text.rei.music_disc": "音乐唱片",
   "favorite.section.gamemode": "游戏模式",
   "favorite.section.weather": "天气",
   "favorite.section.time": "时间",
@@ -331,6 +336,9 @@
   "config.roughlyenoughitems.scrollingEntryListWidget": "条目列表操作：",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "滚动",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "分页",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle": "不搜索时条目列表：",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.true": "不可见",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.false": "可见",
   "config.roughlyenoughitems.horizontalEntriesBoundaries": "水平条目边界：",
   "config.roughlyenoughitems.verticalEntriesBoundaries": "垂直条目边界：",
   "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "条目列限制：",
