--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_hk.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_hk.json
@@ -32,6 +32,7 @@
   "text.rei.config.menu.config": "選項…",
   "text.rei.config.menu.search_field.position": "搜尋欄位置...",
   "text.rei.config.menu.search_field.input_method": "輸入法...",
+  "text.rei.config.menu.search_field.hide_entry_panel_idle": "沒有搜尋篩選時隱藏項目列表",
   "category.rei.crafting": "合成",
   "category.rei.smelting": "燒煉",
   "category.rei.smelting.fuel": "燃料",
@@ -77,6 +78,8 @@
   "text.rei.performance": "效能分析",
   "text.rei.addons": "REI 附加功能",
   "text.rei.shapeless": "無序合成",
+  "text.rei.crafting.firework.gunpowder.amount": "火藥的數量將影響煙花的飛行時間。",
+  "text.rei.crafting.suspicious_stew": "由此合成的可疑嘅燉湯將具有隨機的狀態效果。",
   "text.rei.input.methods": "輸入法",
   "text.rei.input.methods.reload.progress": "進度：%s%%",
   "text.rei.input.methods.default": "預設",
@@ -193,6 +196,8 @@
   "text.rei.collapsed.entry.hint.expand.macos": "按住《Option》鍵再點擊此處以展開所有 %s （%d 條目）",
   "text.rei.collapsed.entry.hint.collapse": "按住《Alt》鍵再點擊此處以摺疊所有 %s （%d 條目）",
   "text.rei.collapsed.entry.hint.collapse.macos": "按住《Option》鍵再點擊此處以摺疊所有 %s （%d 條目）",
+  "text.rei.spawn_egg": "生怪蛋",
+  "text.rei.music_disc": "唱片",
   "favorite.section.gamemode": "遊戲模式",
   "favorite.section.weather": "天氣",
   "favorite.section.time": "時間",
@@ -331,6 +336,9 @@
   "config.roughlyenoughitems.scrollingEntryListWidget": "物品列表方式：",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "捲動",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "分頁",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle": "沒有搜尋篩選時的項目列表:",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.true": "不可見",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.false": "可見",
   "config.roughlyenoughitems.horizontalEntriesBoundaries": "物品列表水平邊界：",
   "config.roughlyenoughitems.verticalEntriesBoundaries": "物品列表垂直邊界：",
   "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "最大列數：",
