--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -22,6 +22,7 @@
   "text.rei.searching": "REI searching results...",
   "text.rei.searching.step": "This is slower on the first search.\nProgress: %s%%",
   "text.rei.config.menu.dark_theme": "Dark Theme",
+  "text.rei.config.menu.reduced_motion": "Reduced Motion",
   "text.rei.config.menu.craftable_filter": "Craftable Filter",
   "text.rei.config.menu.display": "Display Settings...",
   "text.rei.config.menu.display.remove_recipe_book": "Remove Recipe Book",
@@ -221,6 +222,7 @@
   "config.roughlyenoughitems.cheating": "Cheating:",
   "config.roughlyenoughitems.cheating.when_creative": "During Creative Mode",
   "config.roughlyenoughitems.favoritesEnabled": "Favorites Enabled:",
+  "config.roughlyenoughitems.reduceMotion": "Reduced Motion:",
   "config.roughlyenoughitems.keyBindings": "Keybindings",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Show Recipe:",
   "config.roughlyenoughitems.keyBindings.hideKeybind": "Hide/Show REI:",
