--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -199,6 +199,20 @@
   "text.rei.collapsed.entry.hint.expand.macos": "Option-Click to expand all %s (%d entries)",
   "text.rei.collapsed.entry.hint.collapse": "Alt-Click to collapse all %s (%d entries)",
   "text.rei.collapsed.entry.hint.collapse.macos": "Option-Click to collapse all %s (%d entries)",
+  "text.rei.collapsible.entries": "Collapsible Entries",
+  "text.rei.collapsible.entries.count": "%s entries",
+  "text.rei.collapsible.entries.enabled.true": "Enabled",
+  "text.rei.collapsible.entries.enabled.false": "Disabled",
+  "text.rei.collapsible.entries.source": "Added by",
+  "text.rei.collapsible.entries.source.custom": "Custom!!",
+  "text.rei.collapsible.entries.toggle": "Toggle",
+  "text.rei.collapsible.entries.delete": "Delete",
+  "text.rei.collapsible.entries.custom.title": "Custom Collapsible Group",
+  "text.rei.collapsible.entries.custom.id": "ID:",
+  "text.rei.collapsible.entries.custom.name": "Name:",
+  "text.rei.collapsible.entries.custom.select": "Select entries...",
+  "text.rei.collapsible.entries.custom.select.add": "Add to Group",
+  "text.rei.collapsible.entries.custom.select.remove": "Remove from Group",
   "text.rei.spawn_egg": "Spawn Egg",
   "text.rei.music_disc": "Music Disc",
   "favorite.section.gamemode": "Game Mode",
