--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -199,7 +199,8 @@
   "text.rei.collapsed.entry.hint.expand.macos": "Option-Click to expand all %s (%d entries)",
   "text.rei.collapsed.entry.hint.collapse": "Alt-Click to collapse all %s (%d entries)",
   "text.rei.collapsed.entry.hint.collapse.macos": "Option-Click to collapse all %s (%d entries)",
-  "text.rei.collapsible.entries": "Collapsible Entries",
+  "text.rei.collapsible.entries": "Collapsible Entries...",
+  "text.rei.collapsible.entries.title": "Collapsible Entries",
   "text.rei.collapsible.entries.count": "%s entries",
   "text.rei.collapsible.entries.enabled.true": "Enabled",
   "text.rei.collapsible.entries.enabled.false": "Disabled",
@@ -374,8 +375,10 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomed",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Highlighted",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Should Filter Displays:",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "Excluded Quick Craft Categories:",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Configure...",
+  "config.roughlyenoughitems.configureCategories": "Configure Categories...",
+  "config.roughlyenoughitems.configureCategories.title": "Configuring Categories",
+  "config.roughlyenoughitems.configureCategories.visibility.true": "Enabled",
+  "config.roughlyenoughitems.configureCategories.visibility.false": "Disabled",
   "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Configuring Quick Craft Categories",
   "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Toggle",
   "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Available for Quick Craft",
