--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -19,6 +19,8 @@
   "text.rei.inventory.highlighting.enabled.tooltip": "This makes slots that does not match\nthe search filter gray.\nDouble click the search bar to toggle this mode.",
   "text.rei.caching.search": "REI caching search results...",
   "text.rei.caching.search.step": "Step %d/%d (%s%%):",
+  "text.rei.searching": "REI searching results...",
+  "text.rei.searching.step": "This is slower on the first search.\nProgress: %s%%",
   "text.rei.config.menu.dark_theme": "Dark Theme",
   "text.rei.config.menu.craftable_filter": "Craftable Filter",
   "text.rei.config.menu.display": "Display Settings...",
